--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -123,10 +123,11 @@
 
     <TextView
         android:id="@+id/etFilename"
-        android:layout_width="115dp"
+        android:layout_width="92dp"
         android:layout_height="29dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_uploadData"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
